--- a/themes/academic/data/fonts/monaco.toml
+++ b/themes/academic/data/fonts/monaco.toml
@@ -2,10 +2,11 @@
 name = "Monaco"
 
 # Optional Google font URL
-google_fonts = "B612+Mono:400,700|Orbitron:400,700|Space+Mono:400,700|Lato"
+google_fonts = "B612+Mono:400,700|Orbitron:400,700|Space+Mono:400,700|Lato|Montserrat"
 
 # Font families
 # Orbitron
+# Montserrat
 heading_font = "Space Mono"
 body_font = "Lato"
 nav_font = "Lato"
