Play with fonts

--- a/themes/academic/data/fonts/monaco.toml
+++ b/themes/academic/data/fonts/monaco.toml
@@ -2,12 +2,13 @@
 name = "Monaco"
 
 # Optional Google font URL
-google_fonts = "B612+Mono:400,700|Orbitron:400,700|Space+Mono:400,700|Lato|Montserrat"
+google_fonts = "B612+Mono:400,700|Orbitron:400,700|Space+Mono:400,700|Lato|Montserrat|Inconsolata|Open+Sans"
 
 # Font families
 # Orbitron
 # Montserrat
+# Lato
 heading_font = "Space Mono"
 body_font = "Lato"
-nav_font = "Lato"
-mono_font = "Lato"
+nav_font = "Open Sans"
+mono_font = "Inconsolata"
