--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -37,6 +37,9 @@ enableEmoji = true
 footnotereturnlinkcontents = "<sup>^</sup>"
 ignoreFiles = ["\\.ipynb$", ".ipynb_checkpoints$", "\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 
+googlefonts = "//fonts.googleapis.com/css?family=Inconsolata"
+fontcode = "Inconsolata"
+
 [outputs]
   home = [ "HTML", "RSS", "JSON", "WebAppManifest" ]
   section = [ "HTML", "RSS" ]
