Remove old address

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -90,11 +90,11 @@ phone = ""
 
 # Address
 # For country_code, use the 2-letter ISO code (see https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2 )
-address = {street = "Visvesvaraya Hostel, IIT (BHU) Varanasi", city = "Varanasi", region = "Uttar Pradesh", postcode = "221005", country = "India", country_code = "IN"}
+#address = {street = "Visvesvaraya Hostel, IIT (BHU) Varanasi", city = "Varanasi", region = "Uttar Pradesh", postcode = "221005", country = "India", country_code = "IN"}
 
 # Geographic coordinates
 # To get your coordinates, right-click on Google Maps and choose "What's here?". The coords will show up at the bottom.
-coordinates = {latitude = "25.262518", longitude = "82.984014"}
+#coordinates = {latitude = "25.262518", longitude = "82.984014"}
 
 # Directions for visitors to locate you.
 directions = ""
