--- a/themes/academic/data/fonts/mr_robot.toml
+++ b/themes/academic/data/fonts/mr_robot.toml
@@ -2,11 +2,11 @@
 name = "Mr Robot"
 
 # Optional Google font URL
-google_fonts = "B612+Mono:400,700|Orbitron:400,700|Space+Mono:400,700"
+google_fonts = "B612+Mono:400,700|Orbitron:400,700|Lato"
 
 # Font families
 # Orbitron
-heading_font = "Space Mono"
+heading_font = "Lato"
 body_font = "B612 Mono"
 nav_font = "B612 Mono"
 mono_font = "B612 Mono"
