Update website as per latest information

--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -18,10 +18,10 @@
   url = "#projects"
   weight = 30
 
-#[[main]]
-#  name = "Publications"
-#  url = "#tags"
-#  weight = 40
+[[main]]
+  name = "Publications"
+  url = "#publications"
+  weight = 40
 
 [[main]]
   name = "Contact"
