Add blogpost on FlashAttention by Stanford

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
     "cSpell.words": [
-        "constarined"
+        "constarined",
+        "Recomputation",
+        "softmax"
+    ],
+    "cSpell.ignoreWords": [
+        "recomputation"
     ]
 }
